# external_sort

./: CMakeLists.txt  README.md
src/: main.cpp  predef.h  run.cpp  run.h
src/ext_sort/: ext_sort_utils.cpp  ext_sort_utils.h  file_chunks_enumerator.cpp  file_chunks_enumerator.h  merge_sort_sorter.cpp  merge_sort_sorter.h  merger.h  multi_files_per_phase_merger.cpp  multi_files_per_phase_merger.h  sorter.h  types.h
src/utils/: align.h  arg.cpp  arg.h  empty_enumerator.h  enumerator.h  err.cpp  err.h  merge_sort.h  observer.h  scope_time_logger.cpp  scope_time_logger.h  str_conv.h
src/utils/fs/: fs.cpp  fs.h  simple_file_paths_enumerator.cpp  simple_file_paths_enumerator.h
src/utils/log/: log.cpp  log.h  log_exception.cpp  log_exception.h  log_level.h  log_registry.cpp  log_registry.h  logger.h  scoped_log.cpp  scoped_log.h
src/utils/log/loggers/: composite_logger.cpp  composite_logger.h  null_logger.cpp  null_logger.h  ostream_logger.cpp  ostream_logger.h  threadsafe_logger.cpp  threadsafe_logger.h
tests/: check_file_sorted.py  generate_data_file.py  run_test.py
